# synx

./: .gitignore  .noindex  ADAPTIVE_COMPRESSION_BUG_FIX.md  ARCHITECTURE_CLARIFICATION.md  CHANGELOG.md  COMPRESSION_BUGS_FIXED.md  COMPRESSION_CACHE_FIX.md  COMPRESSION_FILE_CONTEXT_EXAMPLE.md  COMPRESSION_FIX.md  COMPRESSION_IMPROVEMENTS.md  COMPRESSION_PLAN.md  COMPRESSION_QUICK_START.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  FINAL_ANSWER.md  FUZZY_FILE_COMPLETION.md  IMPLEMENTATION_REPORT.md  INSTRUCTIONS.md  MAP_DIAGRAMS.md  MAP_IMPLEMENTATION_PLAN.md  MAP_QUICK_START.md  MAP_REALISTIC_APPROACH.md  MIGRATION_STATUS.md  NON_INTERACTIVE_FIX_PLAN.md  ONE_HOP_OPTIMIZATION.md  PLAN_COMPRESSION_CONTEXT_LOSS_FIX.md  PR19_FIXES_SUMMARY.md  PRESSURE_TRIGGER_REMOVAL.md  README.md  SESSION_RECOVERY_FIX.md  SESSION_RESUME_FIX.md  install.sh
.github/workflows/: ci.yml  dependencies.yml  deploy-website.yml  release.yml
config-examples/: MAP_TESTING_GUIDE.md  README.md  map-developer-workflow.toml  map-planner-corrected.toml
config-templates/: default.toml  map-executor.toml  map-planner.toml  workflow.toml
config-templates/agents/developer/: rust.toml
doc/: 01-installation.md  02-overview.md  03-configuration.md  04-providers.md  05-sessions.md  06-advanced.md  07-command-layers.md  08-mcp-server-development.md  09-websocket-server.md  10-workflows.md  11-acp-editor-integration.md  README.md  pre-commit.md
doc/dev/: 01-building-from-source.md  02-architecture.md  03-mcp-server-development.md
doc/integration/: 01-websocket-server.md  02-acp-protocol.md  03-daemon-and-hooks.md  04-tap-system.md
doc/reference/: 01-cli-reference.md  02-session-commands.md  03-config-reference.md  04-environment-variables.md
doc/troubleshooting/: 01-common-issues.md  02-migration-guide.md
doc/usage/: 01-installation.md  02-quickstart.md  03-configuration.md  04-providers.md  05-sessions.md  06-roles.md  07-mcp-tools.md  08-compression.md  09-workflows.md  10-commands-and-layers.md  11-structured-output.md  12-editor-integration.md  13-learning.md  14-pipelines.md  14-supervisor.md  15-skills.md  16-token-efficiency.md  17-local-tools.md  18-guardrails.md
doc/use-cases/: 01-ci-cd-code-review.md  02-event-driven-agent.md  03-custom-development-workflow.md  04-web-dashboard-integration.md  05-multi-agent-delegation.md  06-dynamic-mcp-servers.md  07-scheduled-tasks.md  08-long-running-development.md  09-custom-hooks.md  10-deterministic-pipelines.md
scripts/: install-completions.sh  test_acp.sh
src/: agent.rs  baseline.rs  branding.rs  cache.rs  cli.rs  directories.rs  ignores.rs  lib.rs  main.rs  peer.rs  proctitle.rs  protocol.rs  providers.rs  state.rs  sync.rs  transport.rs  ui.rs  walker.rs  watcher.rs
src/acp/: agent.rs  commands.rs  mod.rs
src/agent/: deps.rs  inputs.rs  mod.rs  registry.rs  resolver.rs  taps.rs
src/commands/: acp.rs  agent.rs  ask.rs  common.rs  complete.rs  config.rs  mod.rs  run.rs  send.rs  server.rs  session.rs  shell.rs  tap.rs  untap.rs  vars.rs  workflow.rs
src/config/: agents.rs  env_source.rs  guardrails.rs  hooks.rs  layers.rs  loading.rs  mcp.rs  migrations.rs  mod.rs  oauth_config.rs  pipelines.rs  providers.rs  registry.rs  roles.rs  runtime_overlay.rs  validation.rs  workflows.rs
src/embeddings/: mod.rs  reranker.rs
src/learning/: extract.rs  inject.rs  mod.rs
src/learning/backend/: file.rs  mcp.rs  mod.rs
src/logging/: acp_error.rs  mod.rs  tracing_setup.rs
src/mcp/: health_monitor.rs  hint_accumulator.rs  mod.rs  process.rs  server.rs  shared_utils.rs  tool_map.rs  utils.rs  workdir.rs
src/mcp/agent/: functions.rs  mod.rs
src/mcp/core/: ask.rs  capability.rs  core_tests.rs  dynamic.rs  dynamic_agents.rs  functions.rs  local_tool.rs  mod.rs  plan_tests.rs  skill.rs  skill_auto.rs  skill_tests.rs  tap.rs
src/mcp/dev/: ask.rs  ast_grep.rs  dev_tests.rs  functions.rs  mod.rs  plan_tests.rs  shell.rs  workdir.rs
src/mcp/fs/: ast_grep.rs  core.rs  directory.rs  file_ops.rs  fs_tests.rs  functions.rs  mod.rs  shell.rs  tests.rs  text_editing.rs  workdir.rs
src/mcp/oauth/: callback_server.rs  cimd.rs  device_flow.rs  discovery.rs  flow.rs  mod.rs  token_store.rs
src/mcp/runtime/: mod.rs
src/mcp/web/: api_client.rs  formatters.rs  html_converter.rs  image_search.rs  mod.rs  news_search.rs  video_search.rs  web_search.rs
src/providers/: amazon.rs  anthropic.rs  cloudflare.rs  deepseek.rs  google.rs  mod.rs  openai.rs  openrouter.rs  retry.rs
src/sandbox/: linux.rs  macos.rs  mod.rs
src/session/: anchor.rs  background_jobs.rs  cache.rs  cache_keepalive.rs  cancellation.rs  chat_helper.rs  completion.rs  context.rs  dedup.rs  guardrails.rs  helper_functions.rs  hooks.rs  image.rs  inbox.rs  inject_listener.rs  logger.rs  mod.rs  modal.rs  model_utils.rs  output.rs  persistence.rs  pipe.rs  project_context.rs  prompt.rs  report.rs  smart_summarizer.rs  tap_runs.rs  token_counter.rs  video.rs  webhook_listener.rs
src/session/chat/: animation.rs  animation_manager.rs  assistant_output.rs  command_executor.rs  commands.rs  context_reduction.rs  context_truncation.rs  conversation_compression.rs  cost_tracker.rs  edit_mode.rs  file_context.rs  formatting.rs  input.rs  layered_response.rs  markdown.rs  message_handler.rs  mod.rs  prompt.rs  reedline_adapter.rs  response.rs  semantic_chunking.rs  session_continuation.rs  status_prefix.rs  syntax.rs  thinking_display.rs  tool_display.rs  tool_error_tracker.rs  tool_processor.rs
src/session/history/: mod.rs
src/session/layers/: layer_trait.rs  mod.rs  orchestrator.rs  processor.rs
src/session/pipelines/: mod.rs  (+2 more)
src/supervisor/: detect.rs  gate.rs  mod.rs  stats.rs
src/utils/: file_parser.rs  file_renderer.rs  glob.rs  mod.rs  term_echo.rs  terminal_output.rs  time.rs  truncation.rs
src/websocket/: mod.rs  protocol.rs  server.rs
src/workflow/: mod.rs  proc.rs  run.rs  schema.rs  validate.rs
tests/: compression_tests.rs  ctrl_c_cleanup_test.rs  session_restore_tests.rs
tests/smoke/: acp.sh  schedule.sh  ws.sh
website/: index.html  script.js  styles.css
(+94 files in other folders)
