[package]
name = "synx"
version = "0.1.0"
edition = "2021"
description = "Fast, real-time bidirectional file sync over SSH"
license = "Apache-2.0"
authors = ["Muvon"]
readme = "README.md"

[[bin]]
name = "synx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = { version = "1.8", features = ["mmap", "rayon"] }
# bincode 2 splits encode/decode from serde; keep using our serde derives
# via the `serde` feature + the `bincode::serde::*` functions.
bincode = { version = "2", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
dirs = "6"
fast_rsync = "0.2"
filetime = "0.2"
humansize = "2.1"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.7"
owo-colors = "4.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "io-util", "io-std", "fs", "process", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zstd = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
