[package]
name = "octomind"
version = "0.29.0"
edition = "2021"
authors = ["Muvon Un Limited <contact@muvon.io>"]
license = "Apache-2.0"
description = "Session-based AI development assistant with conversational codebase interaction, multimodal vision support, built-in MCP tools, and multi-provider AI integration"
homepage = "https://octomind.run"
repository = "https://github.com/muvon/octomind"
documentation = "https://octomind.muvon.io"
keywords = ["ai", "development", "assistant", "productivity", "conversational"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
rust-version = "1.95"
exclude = [
    "tests/fixtures/*",
    "examples/*",
    ".github/*",
    "docs/*",
    "scripts/*",
    "*.md",
    "install.sh"
]

# Enable static linking
[profile.release]
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallel code generation units for better optimization
panic = "abort"         # Abort on panic for smaller binary size
strip = true            # Strip symbols from binary
opt-level = "z"         # Optimize for speed
overflow-checks = false # Disable overflow checks in release mode

[dependencies]
# octolib = { path = "../octolib", default-features = false, features = ["huggingface"] }
octolib = { version = "0.21.6", default-features = false, features = ["huggingface"] }
rmcp = { version = "1.7.0", default-features = false }

tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "process", "fs", "sync", "signal", "io-std", "net"] }
crossterm = "0.29.0"
indicatif = "0.18.4"
parking_lot = "0.12.5"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v4"] }
tiktoken-rs = "0.11.0" # Token counter
reqwest = { version = "0.13.3", features = ["json", "rustls", "gzip"], default-features = false }
rustls-webpki = ">=0.103.12"
flate2 = "1.1"
zstd = "0.13"
anyhow = "1.0.102"
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
toml = "1.1"
lazy_static = "1.5.0"
fuzzy-matcher = "0.3.7"
tokio-util = { version = "0.7", features = ["rt", "compat"] }
reedline = { version = "0.47", features = ["bashisms", "external_printer"] }
nu-ansi-term = "0.50"
regex = "1.12.3"
colored = "3.1.1"
async-trait = "0.1.89"
termimad = "0.34.1"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }

url = "2.5.8"
dirs = "6.0.0"
glob = "0.3.3"
ignore = "0.4.25"
futures = "0.3.32"
dotenvy = "0.15.7"
arboard = "3.6.1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
viuer = "0.11.0"
base64 = "0.22"
urlencoding = "2.1.3"
humantime-serde = "1.1.1"
tokio-tungstenite = "0.29.0"
futures-util = "0.3"

# OAuth 2.1 + PKCE authentication
oauth2 = { version = "5.0", features = ["reqwest", "rustls-tls"] }
keyring = { version = "3" }
sha2 = "0.11.0"
hex = "0.4"
serde_urlencoded = "0.7"
thiserror = "2.0"
open = "5"
tracing = { version = "0.1", default-features = false }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
agent-client-protocol = "0.10.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
which = "8.0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
proctitle = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tempfile = "3.27.0"
serial_test = "3.4.0"

[profile.dev]
opt-level = 1          # Basic optimizations without slowing compilation too much
debug = true           # Keep debug symbols for backtraces
debug-assertions = true # Keep runtime checks
overflow-checks = true  # Keep overflow checks
lto = false            # Disable Link Time Optimization to speed up builds
codegen-units = 256    # Use more codegen units for faster parallel compilation
incremental = true     # Enable incremental compilation
rpath = false          # Disable runtime search path
