[package]
name = "synx"
version = "0.1.0"
edition = "2021"
description = "Fast, real-time bidirectional file sync over SSH"
license = "Apache-2.0"
authors = ["Muvon"]
readme = "README.md"

[[bin]]
name = "synx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = { version = "1.8", features = ["mmap", "rayon"] }
# postcard: actively maintained, serde-native binary format. Replaced
# bincode in 2026 because bincode upstream went unmaintained (3.0.0 was
# a tombstone release that intentionally fails to build —
# see RUSTSEC-2025-0141). Wire format is ~70% the size of bincode,
# self-contained, stable spec.
postcard = { version = "1", features = ["alloc"] }
clap = { version = "4.6", features = ["derive"] }
dirs = "6"
fast_rsync = "0.2"
filetime = "0.2"
humansize = "2.1"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.7"
owo-colors = "4.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.53", features = ["rt-multi-thread", "macros", "io-util", "io-std", "fs", "process", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zstd = "0.13"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
